[project]
name = "Msg Auto Recorder & Replayer"
version = "0.1.0"
description = "Auto Recorder & Replayer based on melobot onebot support."
authors = [{ name = "aicorein", email = "melodyecho@glowmem.com" }]
dependencies = [
    "melobot>=3.1.1",
    "melobot[cli]>=3.1.1",
    "melobot[onebot]>=3.1.1",
    "sqlmodel>=0.0.22",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "aiosqlite>=0.21.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "AGPL3" }

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_calls = true
strict_equality = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "isort>=6.0.0",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "ipython>=8.32.0",
    "sqlite-web>=0.6.4",
]
